log
Fri 17 Mar 2023 06:18:19 PM UTC: 
 exercises.c | 33 +++++++++++++++++++++++++++------
 1 file changed, 27 insertions(+), 6 deletions(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:84:26: error: ‘vec.datos’ is used uninitialized [-Werror=uninitialized]
   84 |   vec.datos = realloc(vec.datos, n * sizeof(int));
      |                       ~~~^~~~~~
exercises.c:82:10: note: ‘vec’ declared here
   82 |   Vector vec;
      |          ^~~
exercises.c:84:15: error: ‘vec.datos’ is used uninitialized [-Werror=uninitialized]
   84 |   vec.datos = realloc(vec.datos, n * sizeof(int));
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c208af1
Fri 17 Mar 2023 06:21:14 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:84:26: error: ‘vec.datos’ is used uninitialized [-Werror=uninitialized]
   84 |   vec.datos = realloc(vec.datos, n * sizeof(int));
      |                       ~~~^~~~~~
exercises.c:82:10: note: ‘vec’ declared here
   82 |   Vector vec;
      |          ^~~
exercises.c:84:15: error: ‘vec.datos’ is used uninitialized [-Werror=uninitialized]
   84 |   vec.datos = realloc(vec.datos, n * sizeof(int));
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
698bca4
Fri 17 Mar 2023 06:22:56 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|4
total_score: 30/70
cb62df0
Fri 17 Mar 2023 09:31:51 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:5: error: assignment to ‘Persona *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |   p = edad;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
d32242a
Fri 17 Mar 2023 09:32:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
5cb399b
Fri 17 Mar 2023 09:39:04 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:28: error: expected expression before ‘Vector’
   86 |   vec = malloc(n * (sizeof Vector) );
      |                            ^~~~~~
exercises.c:88:6: error: invalid type argument of ‘->’ (have ‘Vector’)
   88 |   vec->capacidad = n;
      |      ^~
exercises.c:89:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   89 |    return vec;
      |           ^~~
exercises.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
   90 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
de16435
Fri 17 Mar 2023 09:39:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:28: error: expected expression before ‘Vector’
   86 |   vec = malloc(n * (sizeof Vector) );
      |                            ^~~~~~
exercises.c:89:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   89 |    return vec;
      |           ^~~
exercises.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
   90 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c8da0c4
Fri 17 Mar 2023 09:39:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:28: error: expected expression before ‘Vector’
   86 |   vec = malloc(n * (sizeof Vector) );
      |                            ^~~~~~
exercises.c:89:11: error: invalid type argument of unary ‘*’ (have ‘Vector’)
   89 |    return *vec;
      |           ^~~~
exercises.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
   90 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b7f6fe0
Fri 17 Mar 2023 09:40:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:25: error: expected expression before ‘Vector’
   86 |   vec = malloc( (sizeof Vector) );
      |                         ^~~~~~
exercises.c:89:11: error: invalid type argument of unary ‘*’ (have ‘Vector’)
   89 |    return *vec;
      |           ^~~~
exercises.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
   90 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
41cc5cd
Fri 17 Mar 2023 09:40:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:24: error: expected expression before ‘Vector’
   86 |   vec = malloc( sizeof Vector );
      |                        ^~~~~~
exercises.c:89:11: error: invalid type argument of unary ‘*’ (have ‘Vector’)
   89 |    return *vec;
      |           ^~~~
exercises.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
   90 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bc21fe4
Fri 17 Mar 2023 09:41:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:24: error: expected expression before ‘Vector’
   86 |   vec = malloc( sizeof Vector );
      |                        ^~~~~~
exercises.c:89:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   89 |    return vec;
      |           ^~~
exercises.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
   90 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8fb7e6f
Fri 17 Mar 2023 09:41:30 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:25: error: expected expression before ‘Vector’
   86 |   *vec = malloc( sizeof Vector );
      |                         ^~~~~~
exercises.c:88:6: error: ‘vec’ is a pointer; did you mean to use ‘->’?
   88 |   vec.capacidad = n;
      |      ^
      |      ->
Compilation failed
ceb59ed
Fri 17 Mar 2023 09:41:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:25: error: expected expression before ‘Vector’
   86 |   *vec = malloc( sizeof Vector );
      |                         ^~~~~~
Compilation failed
48b14ea
